Application properties config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+spring.config.import=optional:secrets.properties
+
+# server.port=
+# spring.database.driverClassName=
+# spring.datasource.url=
+# spring.datasource.username=
+# spring.datasource.password=
+# spring.jpa.properties.hibernate.dialect=
+spring.jpa.hibernate.ddl-auto=update
+
+# ====== SMTP Server Settings for smtp email =========================
+# spring.mail.host=
+# spring.mail.port=
+# spring.mail.username=
+# spring.mail.password=
+# Additional Properties for Gmail
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# ======= SWAGGER =====================================================
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.path=/api/doc
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api/v3/api-docs
 
